--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,4 +1,3 @@
-$body-font-family: 'Pixelify Sans', sans-serif;
 $background-color: #020d12;
 $game-container-background-image: url('../images/bgpikachu2.webp');
 $pokemon-run-height: 100px;
@@ -6,264 +5,388 @@ $boardColNum: 18; // Bao gồm 2 cột null ở 2 phía ngoài cùng
 $breakpoint-sm: 768px;
 $heightScreenMobile: 750px;
 $minHeightScreen: 500px;
+
 @mixin respond-from($breakpoint) {
     @media only screen and (max-width: $breakpoint) {
         @content;
     }
 }
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 body {
-    font-family: $body-font-family;
+    font-family: 'Pixelify Sans', sans-serif;
     margin: 0;
     padding: 0;
     background-color: $background-color;
     color: white;
     font-size: 30px;
-}
-.action-bar {
-    display: flex;
-    margin: 20px 0;
-}
-.action-content {
-    width: fit-content;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 250px;
-    @include respond-from(1230px) {
-        justify-content: center;
-        gap: 10px;
+
+    .action-bar {
+        display: flex;
+        margin: 20px 0;
     }
-}
-.button:hover {
-    cursor: pointer;
-    opacity: 0.8;
-}
-.action-left,
-.action-right {
-    display: flex;
-    align-items: center;
-}
-.action-right {
-    gap: 40px;
-}
-.action-icon {
-    width: 50px;
-    margin: auto 10px;
-    display: grid;
-    place-items: center;
-}
-#score {
-    font-size: 30px;
-    color: white;
-}
-.level-parent {
-    max-width: 50px;
-    min-width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    text-align: center;
-    background-color: #5825b4;
-    display: grid;
-    place-items: center;
-    opacity: 0.8;
-    border: 2.5px solid rgba(255, 255, 255, 0.8);
-}
-#level {
-    color: white;
-    font-size: 30px;
-}
-.plus-level {
-    margin-right: 60px;
-}
-.clock {
-    margin-left: 60px;
-}
-.progress {
-    border-radius: 20px;
-    height: 30px;
-    width: 250px;
-    overflow: hidden;
-    border: 1.5px solid rgba(222, 131, 18, 1);
-}
-.progress-bar {
-    width: 100%;
-    height: 100%;
-    background: repeating-linear-gradient(
-            to top left,
-            beige 0,
-            beige 2em,
-            moccasin 2em,
-            moccasin 4em,
-            wheat 4em,
-            wheat 6em
-        ),
-        repeating-linear-gradient(
-            to left,
-            white 0,
-            white 2em,
-            wheat 2em,
-            wheat 4em,
-            beige 4em,
-            beige 6em
-        ),
-        white;
 
-    background-blend-mode: multiply;
-    transition: all ease-in-out 0.2s;
-}
-.reset-button {
-    display: flex;
-    height: fit-content;
-}
-#resetAmount,
-#hintAmount {
-    margin: auto 0;
-}
-#game-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    background-image: $game-container-background-image;
-    background-position: center;
-    object-fit: cover;
-    background-repeat: no-repeat;
-    @media (max-height: $minHeightScreen) {
-        height: unset;
-    }
-}
-.hint-button {
-    display: flex;
-}
-#gameBoard {
-    position: relative;
-    margin: 0 auto;
-    width: fit-content;
-    height: fit-content;
-    display: grid;
-    grid-template-columns: repeat($boardColNum, 1fr);
-    z-index: 1000;
-}
-
-#score-board {
-    width: 500px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-#buttons {
-    width: 500px;
-    margin: 0 auto;
-    text-align: center;
-}
-#restart-button {
-    padding: 15px 14px;
-    font: 18px 'Pixelify Sans', sans-serif;
-    width: fit-content;
-    margin: 0 auto;
-    color: white;
-    outline: 0;
-    background: transparent url(../images/button.png) no-repeat center center;
-    background-size: 100%;
-    border: none;
-}
-.info-button {
-}
-.pieces {
-    position: relative;
-    width: 40px;
-    height: 50px;
-    border: 1px solid rgb(0, 153, 51);
-
-    &:hover {
-        cursor: pointer;
-        opacity: 0.9;
-        border: 1px solid red;
-    }
-    @media (max-height: $heightScreenMobile) {
-        width: 32px;
-        height: 40px;
-    }
-    @media (max-height: $minHeightScreen) {
-        width: 28px;
-        height: 35px;
-    }
-}
-
-.overlay-pieces {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-
-    > * {
-        color: red;
-        margin: 0 auto;
-        padding: 0;
-        font-weight: bold;
+    .action-content {
         width: fit-content;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 250px;
+
+        @include respond-from(1355px) {
+            justify-content: center;
+            gap: 10px;
+        }
     }
-}
 
-.selected {
-    opacity: 0.7;
-}
+    .action-left,
+    .action-right {
+        display: flex;
+        align-items: center;
+    }
 
-.hidden {
-    visibility: hidden;
-}
+    .action-right {
+        gap: 40px;
+    }
 
-.path {
-    border: 2px solid red;
-}
+    .action-icon {
+        width: 50px;
+        margin: auto 10px;
+        display: grid;
+        place-items: center;
 
-.hint {
-    opacity: 0.4;
-}
-#time {
-    font-size: 30px;
-    margin-left: 10px;
-}
-.pokemon-run-margin {
-    height: $pokemon-run-height;
-    width: 100%;
-    background: transparent;
-    @media (max-height: $heightScreenMobile) {
+        @media (max-height: $minHeightScreen) {
+            width: 30px;
+        }
+    }
+    .button:hover {
+        opacity: 0.8;
+        cursor: pointer;
+    }
+    #score {
+        font-size: 30px;
+        color: white;
+    }
+
+    .level-parent {
+        max-width: 50px;
+        min-width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        text-align: center;
+        background-color: #5825b4;
+        display: grid;
+        place-items: center;
+        opacity: 0.8;
+        border: 2.5px solid rgba(255, 255, 255, 0.8);
+
+        @media (max-height: $minHeightScreen) {
+            max-width: 30px;
+            min-width: 30px;
+            height: 30px;
+        }
+    }
+
+    #level {
+        color: white;
+        font-size: 30px;
+
+        @media (max-height: $minHeightScreen) {
+            font-size: 20px;
+        }
+    }
+
+    .plus-level {
+        margin-right: 60px;
+    }
+
+    .clock {
+        margin-left: 60px;
+    }
+
+    .progress {
+        border-radius: 20px;
+        height: 30px;
+        width: 250px;
+        overflow: hidden;
+        border: 1.5px solid rgba(222, 131, 18, 1);
+    }
+
+    .progress-bar {
+        width: 100%;
+        height: 100%;
+        background: repeating-linear-gradient(
+                to top left,
+                beige 0,
+                beige 2em,
+                moccasin 2em,
+                moccasin 4em,
+                wheat 4em,
+                wheat 6em
+            ),
+            repeating-linear-gradient(
+                to left,
+                white 0,
+                white 2em,
+                wheat 2em,
+                wheat 4em,
+                beige 4em,
+                beige 6em
+            ),
+            white;
+
+        background-blend-mode: multiply;
+        transition: all ease-in-out 0.2s;
+    }
+
+    .reset-button {
+        display: flex;
+        height: fit-content;
+    }
+
+    #resetAmount,
+    #hintAmount {
+        margin: auto 0;
+    }
+
+    #game-container {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        background-image: $game-container-background-image;
+        background-position: center;
+        object-fit: cover;
+        background-repeat: no-repeat;
+
+        @media (max-height: $minHeightScreen) {
+            height: unset;
+        }
+    }
+
+    .hint-button {
+        display: flex;
+    }
+
+    #gameBoard {
+        position: relative;
+        margin: 0 auto;
+        width: fit-content;
+        height: fit-content;
+        display: grid;
+        grid-template-columns: repeat($boardColNum, 1fr);
+        z-index: 1000;
+    }
+
+    #score-board,
+    #buttons {
+        width: 500px;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    #restart-button {
+        padding: 15px 14px;
+        font: 18px 'Pixelify Sans', sans-serif;
+        width: fit-content;
+        margin: 0 auto;
+        color: white;
+        outline: 0;
+        background: transparent url(../images/button.png) no-repeat center
+            center;
+        background-size: 100%;
+        border: none;
+        z-index: 1000;
+    }
+
+    .pieces {
+        position: relative;
+        width: 40px;
+        height: 50px;
+        border: 1px solid rgb(0, 153, 51);
+
+        &:hover {
+            cursor: pointer;
+            opacity: 0.9;
+            border: 1px solid red;
+        }
+
+        @media (max-height: $heightScreenMobile) {
+            width: 32px;
+            height: 40px;
+        }
+
+        @media (max-height: $minHeightScreen) {
+            width: 28px;
+            height: 35px;
+        }
+    }
+
+    .overlay-pieces {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        > * {
+            color: red;
+            margin: 0 auto;
+            padding: 0;
+            font-weight: bold;
+            width: fit-content;
+        }
+    }
+
+    .selected {
+        opacity: 0.7;
+    }
+
+    .hidden {
+        visibility: hidden;
+    }
+
+    .path {
+        border: 2px solid red;
+    }
+
+    .hint {
+        opacity: 0.4;
+    }
+
+    #time {
+        font-size: 30px;
+        margin-left: 10px;
+    }
+
+    .pokemon-run-margin {
+        height: $pokemon-run-height;
+        width: 100%;
+        background: transparent;
+
+        @media (max-height: $heightScreenMobile) {
+            display: none;
+        }
+    }
+
+    .pokemon_run {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: $pokemon-run-height;
+        background: transparent;
+        z-index: 0;
+
+        @media (max-height: $heightScreenMobile) {
+            display: none;
+        }
+    }
+
+    @keyframes pikachuRun {
+        0% {
+            transform: translateX(-110%);
+        }
+        100% {
+            transform: translateX(100vw);
+        }
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @keyframes fadeOut {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
+
+    @keyframes fadeInAndScaleFromCenter {
+        0% {
+            opacity: 0;
+            transform: scale(0.5);
+        }
+        100% {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+
+    @keyframes fadeOutAndScaleToCenter {
+        0% {
+            opacity: 1;
+            transform: scale(1);
+        }
+        100% {
+            opacity: 0;
+            transform: scale(0.5);
+        }
+    }
+
+    #pikachuGif {
+        animation: pikachuRun 10s linear infinite;
+        user-select: none;
+    }
+
+    .modal-back-drop {
         display: none;
+        animation: fadeIn ease-in-out 0.3s;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 2000;
+        place-items: center;
     }
-}
-.pokemon_run {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: $pokemon-run-height;
-    background: transparent;
-    z-index: 0;
-    @media (max-height: $heightScreenMobile) {
-        display: none;
-    }
-}
 
-@keyframes pikachuRun {
-    0% {
-        transform: translateX(-110%);
-    }
-    100% {
-        transform: translateX(100vw);
-    }
-}
+    .modal {
+        background: white;
+        border-radius: 20px;
+        padding: 20px 0;
+        animation: fadeInAndScaleFromCenter ease-in-out 0.3s;
+        width: 500px;
 
-#pikachuGif {
-    animation: pikachuRun 10s linear infinite;
-    user-select: none;
+        @include respond-from($breakpoint-sm) {
+            width: 310px;
+        }
+    }
+
+    .modal * {
+        font-family: Arial, Helvetica, sans-serif;
+        color: black;
+        font-size: 20px;
+    }
+
+    .modal-header {
+        padding: 0 10px 10px 25px;
+        border-bottom: 1px solid #020d12;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .modal-body {
+        padding: 20px;
+        display: grid;
+        gap: 20px;
+    }
 }
