--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,5 @@
+/* Trần Võ Hoàng Huy
+Mssv : 21130386 */
 * {
   padding: 0;
   margin: 0;
@@ -171,7 +173,7 @@ body .pieces:hover {
   opacity: 0.9;
   border: 1px solid red;
 }
-@media (max-height: 750px) {
+@media (max-height: 600px) {
   body .pieces {
     width: 32px;
     height: 40px;
@@ -218,7 +220,7 @@ body .pokemon-run-margin {
   width: 100%;
   background: transparent;
 }
-@media (max-height: 750px) {
+@media (max-height: 600px) {
   body .pokemon-run-margin {
     display: none;
   }
@@ -232,7 +234,7 @@ body .pokemon_run {
   background: transparent;
   z-index: 0;
 }
-@media (max-height: 750px) {
+@media (max-height: 600px) {
   body .pokemon_run {
     display: none;
   }
